<package>
  <name>soccer_application</name>
  <version>1.0.0</version>
  <description>Soccer application web app for PR2</description>
  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>

  <license>BSD</license>

  <url type="website">http://pr.willowgarage.com/wiki/pr2_addons</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Brian Gerkey</author>
  <author>Eitan Marder-Eppstein</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>webui</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>webui</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>move_base_msgs</test_depend> -->
  <!-- <test_depend>sound_play</test_depend> -->
  <!-- <test_depend>webui</test_depend> -->

</package>
